# 3gpp-downloader

./: .dockerignore  .env.example  .gitignore  .releaserc.json  3gpp_downloader.py  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  latest.json  links.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run_web.py  test_setup.py  web_settings.json
.github/: copilot-instructions.md
.github/workflows/: publish.yml  release.yml  test.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
scripts/: update_version.py
src/: main.py  web_app.py
src/api/: server.py  state_manager.py
src/api/extensions/: scrape_progress.py
src/tools/: etsi_spider.py  filtering.py  json_downloader.py  monitored_pool.py
src/utils/: logging_config.py
tests/: test_filtering.py
