[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3gpp-downloader"
version = "0.1.0"
description = "A tool to download 3GPP specification PDFs"
authors = [{name = "Kumar Kadatoka"}]
dependencies = [
    "beautifulsoup4",
    "requests",
    "tqdm",
    "humanize",
    "scrapy",
    "urllib3"
]
requires-python = ">=3.8"

[project.scripts]
"3gpp-downloader" = "3gpp_downloader:main"