[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3gpp-downloader"
version = "1.0.1"
description = "A simple tool to download 3GPP specification PDFs"
authors = [{name = "K K"}]
dependencies = [
    "beautifulsoup4==4.13.5",
    "requests==2.32.5",
    "tqdm==4.67.1",
    "humanize==4.13.0",
    "scrapy==2.13.3",
    "urllib3==2.5.0",
    "aiohttp==3.12.15",
    "aiofiles==24.1.0",
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.0",
    "pytest==8.3.4"
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
"3gpp-downloader" = "src.main:main"